--- a/Yongchuan-Sports-Center-Management-System/src/main/resources/templates/BackstageTrain.html
+++ b/Yongchuan-Sports-Center-Management-System/src/main/resources/templates/BackstageTrain.html
@@ -44,7 +44,7 @@
                             <div class="card-body">
                                 <div>
                                     <table style="text-align: center" class="table">
-                                        <tr><td>类别：</td><td><a th:href="@{/train(subject='Football')}">足球</a></td><td><a th:href="@{/train(subject='Basketball')}">篮球</a></td><td><a th:href="@{/train(subject='TableTennis')}">乒乓球</a></td><td><a th:href="@{/train(subject='Swimming')}">游泳</a></td><td><a th:href="@{/train(subject='Bodybuilding')}">健身</a></td><td><a th:href="@{/train(subject='Badminton')}">羽毛球</a></td><td><a th:href="@{/train(subject='Athletics')}">田径</a></td><td><a th:href="@{/train(subject='Tennis')}">网球</a></td><td><a th:href="@{/train(subject='Shotput')}">铅球</a></td><td><a th:href="@{/train(subject='Other')}">其他</a></td></tr>
+                                        <tr><td>类别：</td><td><a th:href="@{/train(subject='Football')}">足球</a></td><td><a th:href="@{/train(subject='Basketball')}">篮球</a></td><td><a th:href="@{/train(subject='TableTennis')}">乒乓球</a></td><td><a th:href="@{/train(subject='Swimming')}">游泳</a></td><td><a th:href="@{/train(subject='Badminton')}">羽毛球</a></td><td><a th:href="@{/train(subject='Athletics')}">田径</a></td></tr>
                                     </table>
                                 </div>
                                 <table id="bootstrap-data-table" class="table table-striped table-bordered">
@@ -72,12 +72,8 @@
                                         <td th:if="${train.subject=='Basketball'}">篮球</td>
                                         <td th:if="${train.subject=='TableTennis'}">乒乓球</td>
                                         <td th:if="${train.subject=='Swimming'}">游泳</td>
-                                        <td th:if="${train.subject=='Bodybuilding'}">健身</td>
                                         <td th:if="${train.subject=='Badminton'}">羽毛球</td>
                                         <td th:if="${train.subject=='Athletics'}">田径</td>
-                                        <td th:if="${train.subject=='Tennis'}">网球</td>
-                                        <td th:if="${train.subject=='Shotput'}">铅球</td>
-                                        <td th:if="${train.subject=='Other'}">其他</td>
                                         <td th:text="${train.teacher}"></td>
                                         <td th:text="${train.quota}"></td>
                                         <td th:text="${train.surplus}"></td>
