--- a/Yongchuan-Sports-Center-Management-System/src/main/resources/templates/Train.html
+++ b/Yongchuan-Sports-Center-Management-System/src/main/resources/templates/Train.html
@@ -25,87 +25,12 @@
                         <dd class="all"><a href="javascript:void(0)" class="this" >全部</a></dd>
                         <dd class="right" style="float: left;width: 75%;">
                             <ul style="padding: 0;">
-                                <li><a href="javascript:void(0)" class="" value="Football">足球</a></li>
-                                <li><a href="javascript:void(0)" class="" value="PingPong">乒乓</a></li>
-                                <li><a href="javascript:void(0)" class="" value="PingPong">羽毛球</a></li>
-                                <li><a href="javascript:void(0)" class="" value="Basketball">篮球</a></li>
-                                <li><a href="javascript:void(0)" class="" value="Swimming">游泳</a></li>
-                                <li><a href="javascript:void(0)" class="" value="Athletic">田径</a></li>
-                            </ul>
-                        </dd>
-                    </dl>
-                    <dl class="Small_class" style="display: none;">
-                        <dt class="left">子&ensp;类：</dt>
-                        <dd class="all"><a href="javascript:void(0)" class="" >全部</a></dd>
-                        <dd class="right" style="">
-                            <ul style="padding: 0;">
-                                <li><a href="javascript:void(0)" class="" value='Chorus'>11人制</a></li>
-                            </ul>
-                        </dd>
-                        <dd class="right" style="">
-                            <ul style="padding: 0;">
-                                <li><a href="javascript:void(0)" class="" value='Drama'>男子单打</a></li>
-                                <li><a href="javascript:void(0)" class="" value='Opera'>男子双打</a></li>
-                                <li><a href="javascript:void(0)" class="" value='TheLivingTheatre'>女子单打</a></li>
-                                <li><a href="javascript:void(0)" class="" value='Other'>女子双打</a></li>
-                                <li><a href="javascript:void(0)" class="" value='Other'>混合双打</a></li>
-                            </ul>
-                        </dd>
-                        <dd class="right" style="">
-                            <ul style="padding: 0;">
-                                <li><a href="javascript:void(0)" class="" value='Drama'>男子单打</a></li>
-                                <li><a href="javascript:void(0)" class="" value='Opera'>男子双打</a></li>
-                                <li><a href="javascript:void(0)" class="" value='TheLivingTheatre'>女子单打</a></li>
-                                <li><a href="javascript:void(0)" class="" value='Other'>女子双打</a></li>
-                                <li><a href="javascript:void(0)" class="" value='Other'>混合双打</a></li>
-                            </ul>
-                        </dd>
-                        <dd class="right" style="">
-                            <ul style="padding: 0;">
-                                <li><a href="javascript:void(0)" class="" value='Rock'>5V5</a></li>
-                            </ul>
-                        </dd>
-                        <dd class="right" style="">
-                            <ul style="padding: 0;">
-                                <li><a href="javascript:void(0)" class="" value='LatinDance'>100米仰泳</a></li>
-                                <li><a href="javascript:void(0)" class="" value='ModernDance'>100米蛙泳</a></li>
-                                <li><a href="javascript:void(0)" class="" value='FolkDance'>100米蝶泳</a></li>
-                                <li><a href="javascript:void(0)" class="" value='Ballet'>100米自由泳</a></li>
-                            </ul>
-                        </dd>
-                        <dd class="right" style="">
-                            <ul style="padding: 0;">
-                                <li><a href="javascript:void(0)" class="" value='BeijingOpera'>50米跑</a></li>
-                                <li><a href="javascript:void(0)" class="" value='ShaoxingOpera'>100米跑</a></li>
-                                <li><a href="javascript:void(0)" class="" value='Huangmeixi'>200米跑</a></li>
-                                <li><a href="javascript:void(0)" class="" value='PingJuOpera'>400米跑</a></li>
-                                <li><a href="javascript:void(0)" class="" value='HenanOpera'>800米跑</a></li>
-                                <li><a href="javascript:void(0)" class="" value='Other'>1500米跑</a></li>
-                                <li><a href="javascript:void(0)" class="" value='HenanOpera'>跳高</a></li>
-                                <li><a href="javascript:void(0)" class="" value='Other'>跳远</a></li>
-                            </ul>
-                        </dd>
-                        <dd class="right" style="">
-                            <ul style="padding: 0;">
-                                <li><a href="javascript:void(0)" class="" value='Football'>足球</a></li>
-                                <li><a href="javascript:void(0)" class="" value='Basketball'>篮球</a></li>
-                                <li><a href="javascript:void(0)" class="" value='TableTennis'>乒乓球</a></li>
-                                <li><a href="javascript:void(0)" class="" value='Swimming'>游泳</a></li>
-                                <li><a href="javascript:void(0)" class="" value='Bodybuilding'>健身</a></li>
-                                <li><a href="javascript:void(0)" class="" value='Badminton'>羽毛球</a></li>
-                                <li><a href="javascript:void(0)" class="" value='Athletics'>田径</a></li>
-                                <li><a href="javascript:void(0)" class="" value='Tennis'>网球</a></li>
-                                <li><a href="javascript:void(0)" class="" value='Shotput'>铅球</a></li>
-                                <li><a href="javascript:void(0)" class="" value='Other'>其他</a></li>
-                            </ul>
-                        </dd>
-                        <dd class="right" style="">
-                            <ul style="padding: 0;">
-                                <li><a href="javascript:void(0)" class="" value='Acrobatics'>器械杂技</a></li>
-                                <li><a href="javascript:void(0)" class="" value='BodyAcrobatics'>形体杂技</a></li>
-                                <li><a href="javascript:void(0)" class="" value='AerialAcrobatics'>高空杂技</a></li>
-                                <li><a href="javascript:void(0)" class="" value='OralSkills'>口技</a></li>
-                                <li><a href="javascript:void(0)" class="" value='Other'>其他</a></li>
+                                <li><a th:href="@{/trainPage(subject='Football')}" th:class="${subject=='Football'?'this':''}" value="Football">足球</a></li>
+                                <li><a th:href="@{/trainPage(subject='TableTennis')}" th:class="${subject=='TableTennis'?'this':''}" value="TableTennis">乒乓球</a></li>
+                                <li><a th:href="@{/trainPage(subject='Badminton')}" th:class="${subject=='Badminton'?'this':''}" value="Badminton">羽毛球</a></li>
+                                <li><a th:href="@{/trainPage(subject='Basketball')}" th:class="${subject=='Basketball'?'this':''}" value="Basketball">篮球</a></li>
+                                <li><a th:href="@{/trainPage(subject='Swimming')}" th:class="${subject=='Swimming'?'this':''}" value="Swimming">游泳</a></li>
+                                <li><a th:href="@{/trainPage(subject='Athletic')}" th:class="${subject=='Athletic'?'this':''}" value="Athletic">田径</a></li>
                             </ul>
                         </dd>
                     </dl>
@@ -113,11 +38,10 @@
                 <!--比赛信息-->
                 <div class="ticket">
                     <ul>
-                        <li>
+                        <li th:each="train : ${trains}">
                             <div class="search_img">
-                                <img alt="" src="../static/img/showPicture/tkzc.jpg">
                                 <div class="info">
-                                    <h3><a href="javascript:void(0)" target="_blank">永川区第九届全民乒乓免费培训班</a></h3>
+                                    <h3><a href="javascript:void(0)"></a></h3>
                                     <p class="txt_teach">
                                         <a href="javascript:void(0)"><span class="fa fa-user-o"></span>张无忌</a>
                                     </p>
@@ -126,54 +50,6 @@
                                     </p>
                                     <p class="txt_add">
                                         <a href="javascript:void(0)"><span class="fa fa-map-marker "></span>永川体育中心 - 乒乓球馆</a>
-                                    </p>
-                                    <p class="txt_piao">
-                                        <span class="fa fa-user"></span><em>200人</em> <span class="badge green">报名中
-                                    </span>
-                                    </p>
-                                </div>
-                                <div class="gp_btn">
-                                    <button class="btn btn-primary" style="float: right;"  data-toggle="modal" data-target="#empUpdateModal1">报名</button>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="search_img">
-                                <img alt="" src="../static/img/showPicture/tkzc.jpg">
-                                <div class="info">
-                                    <h3><a href="javascript:void(0)" target="_blank">永川区第九届全民篮球免费培训班</a></h3>
-                                    <p class="txt_teach">
-                                        <a href="javascript:void(0)"><span class="fa fa-user-o"></span>张中杰</a>
-                                    </p>
-                                    <p class="txt_time">
-                                        <a href="javascript:void(0)"><span class="fa fa-calendar"></span>2019.04.22 周一 09:30</a>
-                                    </p>
-                                    <p class="txt_add">
-                                        <a href="javascript:void(0)"><span class="fa fa-map-marker "></span>重庆文理学院 - 篮球场</a>
-                                    </p>
-                                    <p class="txt_piao">
-                                        <span class="fa fa-user"></span><em>200人</em> <span class="badge red">报名截止
-                                    </span>
-                                    </p>
-                                </div>
-                                <div class="gp_btn">
-                                    <button class="btn btn-primary" style="float: right;"  data-toggle="modal" data-target="#empUpdateModal1" disabled>报名</button>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="search_img">
-                                <img alt="" src="../static/img/showPicture/tkzc.jpg">
-                                <div class="info">
-                                    <h3><a href="javascript:void(0)" target="_blank">永川区第九届全民游泳免费培训班</a></h3>
-                                    <p class="txt_teach">
-                                        <a href="javascript:void(0)"><span class="fa fa-user-o"></span>汤米</a>
-                                    </p>
-                                    <p class="txt_time">
-                                        <a href="javascript:void(0)"><span class="fa fa-calendar"></span>2019.04.22 周一 09:30</a>
-                                    </p>
-                                    <p class="txt_add">
-                                        <a href="javascript:void(0)"><span class="fa fa-map-marker "></span>永川体育中心 - 游泳馆</a>
                                     </p>
                                     <p class="txt_piao">
                                         <span class="fa fa-user"></span><em>200人</em> <span class="badge green">报名中
