--- a/Yongchuan-Sports-Center-Management-System/src/main/resources/templates/ticketPurchase.html
+++ b/Yongchuan-Sports-Center-Management-System/src/main/resources/templates/ticketPurchase.html
@@ -42,72 +42,72 @@
                         <dt class="left">子&ensp;类：</dt>
                         <dd class="right">
                             <ul style="padding: 0;" th:if="${type=='Music'}">
-                                <li><a th:href="@{/ticketPurchase(type='Music',subtype='Chorus')}" class="" value='Chorus'>声乐及合唱</a></li>
-                                <li><a th:href="@{/ticketPurchase(type='Music',subtype='AncientMusic')}" class="" value='AncientMusic'>室内乐及古乐</a></li>
-                                <li><a th:href="@{/ticketPurchase(type='Music',subtype='Solo')}" class="" value='Solo'>独奏</a></li>
-                                <li><a th:href="@{/ticketPurchase(type='Music',subtype='Other')}" class="" value='Other'>其他</a></li>
+                                <li><a th:href="@{/ticketPurchase(type='Music',subtype='Chorus')}" th:class="${subtype=='Chorus'?'this':''}" value='Chorus'>声乐及合唱</a></li>
+                                <li><a th:href="@{/ticketPurchase(type='Music',subtype='AncientMusic')}" th:class="${subtype=='AncientMusic'?'this':''}" value='AncientMusic'>室内乐及古乐</a></li>
+                                <li><a th:href="@{/ticketPurchase(type='Music',subtype='Solo')}" th:class="${subtype=='Solo'?'this':''}" value='Solo'>独奏</a></li>
+                                <li><a th:href="@{/ticketPurchase(type='Music',subtype='Other')}" th:class="${subtype=='Other'?'this':''}" value='Other'>其他</a></li>
                             </ul>
                         </dd>
                         <dd class="right" th:if="${type=='Theatre'}">
                             <ul style="padding: 0;">
-                                <li><a th:href="@{/ticketPurchase(type='Theatre',subtype='Drama')}" class="" value='Drama'>话剧</a></li>
-                                <li><a th:href="@{/ticketPurchase(type='Theatre',subtype='Opera')}" class="" value='Opera'>歌剧</a></li>
-                                <li><a th:href="@{/ticketPurchase(type='Theatre',subtype='TheLivingTheatre')}" class="" value='TheLivingTheatre'>舞台剧</a></li>
-                                <li><a th:href="@{/ticketPurchase(type='Theatre',subtype='Other')}" class="" value='Other'>其他</a></li>
+                                <li><a th:href="@{/ticketPurchase(type='Theatre',subtype='Drama')}" th:class="${subtype=='Drama'?'this':''}" value='Drama'>话剧</a></li>
+                                <li><a th:href="@{/ticketPurchase(type='Theatre',subtype='Opera')}" th:class="${subtype=='Opera'?'this':''}" value='Opera'>歌剧</a></li>
+                                <li><a th:href="@{/ticketPurchase(type='Theatre',subtype='TheLivingTheatre')}" th:class="${subtype=='TheLivingTheatre'?'this':''}" value='TheLivingTheatre'>舞台剧</a></li>
+                                <li><a th:href="@{/ticketPurchase(type='Theatre',subtype='Other')}" th:class="${subtype=='Other'?'this':''}" value='Other'>其他</a></li>
                             </ul>
                         </dd>
                         <dd class="right" style="" th:if="${type=='Concert'}">
                             <ul style="padding: 0;">
-                                <li><a th:href="@{/ticketPurchase(type='Concert',subtype='Rock')}" class="" value='Rock'>摇滚</a></li>
-                                <li><a th:href="@{/ticketPurchase(type='Concert',subtype='Nation')}" class="" value='Nation'>民族</a></li>
-                                <li><a th:href="@{/ticketPurchase(type='Concert',subtype='Popular')}" class="" value='Popular'>流行</a></li>
-                                <li><a th:href="@{/ticketPurchase(type='Concert',subtype='Festival')}" class="" value='Festival'>音乐节</a></li>
-                                <li><a th:href="@{/ticketPurchase(type='Concert',subtype='Sir')}" class="" value='Sir'>爵士</a></li>
-                                <li><a th:href="@{/ticketPurchase(type='Concert',subtype='Other')}" class="" value='Other'>其他</a></li>
+                                <li><a th:href="@{/ticketPurchase(type='Concert',subtype='Rock')}" th:class="${subtype=='Rock'?'this':''}" value='Rock'>摇滚</a></li>
+                                <li><a th:href="@{/ticketPurchase(type='Concert',subtype='Nation')}" th:class="${subtype=='Nation'?'this':''}" value='Nation'>民族</a></li>
+                                <li><a th:href="@{/ticketPurchase(type='Concert',subtype='Popular')}" th:class="${subtype=='Popular'?'this':''}" value='Popular'>流行</a></li>
+                                <li><a th:href="@{/ticketPurchase(type='Concert',subtype='Festival')}" th:class="${subtype=='Festival'?'this':''}" value='Festival'>音乐节</a></li>
+                                <li><a th:href="@{/ticketPurchase(type='Concert',subtype='Sir')}" th:class="${subtype=='Sir'?'this':''}" value='Sir'>爵士</a></li>
+                                <li><a th:href="@{/ticketPurchase(type='Concert',subtype='Other')}" th:class="${subtype=='Other'?'this':''}" value='Other'>其他</a></li>
                             </ul>
                         </dd>
                         <dd class="right" style="" th:if="${type=='Dance'}">
                             <ul style="padding: 0;">
-                                <li><a th:href="@{/ticketPurchase(type='Dance',subtype='LatinDance')}" class="" value='LatinDance'>拉丁舞</a></li>
-                                <li><a th:href="@{/ticketPurchase(type='Dance',subtype='ModernDance')}" class="" value='ModernDance'>现代舞</a></li>
-                                <li><a th:href="@{/ticketPurchase(type='Dance',subtype='FolkDance')}" class="" value='FolkDance'>民族舞</a></li>
-                                <li><a th:href="@{/ticketPurchase(type='Dance',subtype='Ballet')}" class="" value='Ballet'>芭蕾舞</a></li>
-                                <li><a th:href="@{/ticketPurchase(type='Dance',subtype='Jazz')}" class="" value='Jazz'>爵士舞</a></li>
-                                <li><a th:href="@{/ticketPurchase(type='Dance',subtype='ModernDancing')}" class="" value='ModernDancing'>摩登舞</a></li>
-                                <li><a th:href="@{/ticketPurchase(type='Dance',subtype='Other')}" class="" value='Other'>其他</a></li>
+                                <li><a th:href="@{/ticketPurchase(type='Dance',subtype='LatinDance')}" th:class="${subtype=='LatinDance'?'this':''}" value='LatinDance'>拉丁舞</a></li>
+                                <li><a th:href="@{/ticketPurchase(type='Dance',subtype='ModernDance')}" th:class="${subtype=='ModernDance'?'this':''}" value='ModernDance'>现代舞</a></li>
+                                <li><a th:href="@{/ticketPurchase(type='Dance',subtype='FolkDance')}" th:class="${subtype=='FolkDance'?'this':''}" value='FolkDance'>民族舞</a></li>
+                                <li><a th:href="@{/ticketPurchase(type='Dance',subtype='Ballet')}" th:class="${subtype=='Ballet'?'this':''}" value='Ballet'>芭蕾舞</a></li>
+                                <li><a th:href="@{/ticketPurchase(type='Dance',subtype='Jazz')}" th:class="${subtype=='Jazz'?'this':''}" value='Jazz'>爵士舞</a></li>
+                                <li><a th:href="@{/ticketPurchase(type='Dance',subtype='ModernDancing')}" th:class="${subtype=='ModernDancing'?'this':''}" value='ModernDancing'>摩登舞</a></li>
+                                <li><a th:href="@{/ticketPurchase(type='Dance',subtype='Other')}" th:class="${subtype=='Other'?'this':''}" value='Other'>其他</a></li>
                             </ul>
                         </dd>
                         <dd class="right" style="" th:if="${type=='TraditionalOpera'}">
                             <ul style="padding: 0;">
-                                <li><a th:href="@{/ticketPurchase(type='TraditionalOpera',subtype='BeijingOpera')}" class="" value='BeijingOpera'>京剧</a></li>
-                                <li><a th:href="@{/ticketPurchase(type='TraditionalOpera',subtype='ShaoxingOpera')}" class="" value='ShaoxingOpera'>越剧</a></li>
-                                <li><a th:href="@{/ticketPurchase(type='TraditionalOpera',subtype='Huangmeixi')}" class="" value='Huangmeixi'>黄梅戏</a></li>
-                                <li><a th:href="@{/ticketPurchase(type='TraditionalOpera',subtype='PingJuOpera')}" class="" value='PingJuOpera'>评剧</a></li>
-                                <li><a th:href="@{/ticketPurchase(type='TraditionalOpera',subtype='HenanOpera')}" class="" value='HenanOpera'>豫剧</a></li>
-                                <li><a th:href="@{/ticketPurchase(type='TraditionalOpera',subtype='Other')}" class="" value='Other'>其他</a></li>
+                                <li><a th:href="@{/ticketPurchase(type='TraditionalOpera',subtype='BeijingOpera')}" th:class="${subtype=='BeijingOpera'?'this':''}" value='BeijingOpera'>京剧</a></li>
+                                <li><a th:href="@{/ticketPurchase(type='TraditionalOpera',subtype='ShaoxingOpera')}" th:class="${subtype=='ShaoxingOpera'?'this':''}" value='ShaoxingOpera'>越剧</a></li>
+                                <li><a th:href="@{/ticketPurchase(type='TraditionalOpera',subtype='Huangmeixi')}" th:class="${subtype=='Huangmeixi'?'this':''}" value='Huangmeixi'>黄梅戏</a></li>
+                                <li><a th:href="@{/ticketPurchase(type='TraditionalOpera',subtype='PingJuOpera')}" th:class="${subtype=='PingJuOpera'?'this':''}" value='PingJuOpera'>评剧</a></li>
+                                <li><a th:href="@{/ticketPurchase(type='TraditionalOpera',subtype='HenanOpera')}" th:class="${subtype=='HenanOpera'?'this':''}" value='HenanOpera'>豫剧</a></li>
+                                <li><a th:href="@{/ticketPurchase(type='TraditionalOpera',subtype='Other')}" th:class="${subtype=='Other'?'this':''}" value='Other'>其他</a></li>
                             </ul>
                         </dd>
                         <dd class="right" style="" th:if="${type=='Sports'}">
                             <ul style="padding: 0;">
-                                <li><a th:href="@{/ticketPurchase(type='Sports',subtype='Football')}" class="" value='Football'>足球</a></li>
-                                <li><a th:href="@{/ticketPurchase(type='Sports',subtype='Basketball')}" class="" value='Basketball'>篮球</a></li>
-                                <li><a th:href="@{/ticketPurchase(type='Sports',subtype='TableTennis')}" class="" value='TableTennis'>乒乓球</a></li>
-                                <li><a th:href="@{/ticketPurchase(type='Sports',subtype='Swimming')}" class="" value='Swimming'>游泳</a></li>
-                                <li><a th:href="@{/ticketPurchase(type='Sports',subtype='Bodybuilding')}" class="" value='Bodybuilding'>健身</a></li>
-                                <li><a th:href="@{/ticketPurchase(type='Sports',subtype='Badminton')}" class="" value='Badminton'>羽毛球</a></li>
-                                <li><a th:href="@{/ticketPurchase(type='Sports',subtype='Athletics')}" class="" value='Athletics'>田径</a></li>
-                                <li><a th:href="@{/ticketPurchase(type='Sports',subtype='Tennis')}" class="" value='Tennis'>网球</a></li>
-                                <li><a th:href="@{/ticketPurchase(type='Sports',subtype='Shotput')}" class="" value='Shotput'>铅球</a></li>
-                                <li><a th:href="@{/ticketPurchase(type='Sports',subtype='Other')}" class="" value='Other'>其他</a></li>
+                                <li><a th:href="@{/ticketPurchase(type='Sports',subtype='Football')}" th:class="${subtype=='Football'?'this':''}" value='Football'>足球</a></li>
+                                <li><a th:href="@{/ticketPurchase(type='Sports',subtype='Basketball')}" th:class="${subtype=='Basketball'?'this':''}" value='Basketball'>篮球</a></li>
+                                <li><a th:href="@{/ticketPurchase(type='Sports',subtype='TableTennis')}" th:class="${subtype=='TableTennis'?'this':''}" value='TableTennis'>乒乓球</a></li>
+                                <li><a th:href="@{/ticketPurchase(type='Sports',subtype='Swimming')}" th:class="${subtype=='Swimming'?'this':''}" value='Swimming'>游泳</a></li>
+                                <li><a th:href="@{/ticketPurchase(type='Sports',subtype='Bodybuilding')}" th:class="${subtype=='Bodybuilding'?'this':''}" value='Bodybuilding'>健身</a></li>
+                                <li><a th:href="@{/ticketPurchase(type='Sports',subtype='Badminton')}" th:class="${subtype=='Badminton'?'this':''}" value='Badminton'>羽毛球</a></li>
+                                <li><a th:href="@{/ticketPurchase(type='Sports',subtype='Athletics')}" th:class="${subtype=='Athletics'?'this':''}" value='Athletics'>田径</a></li>
+                                <li><a th:href="@{/ticketPurchase(type='Sports',subtype='Tennis')}" th:class="${subtype=='Tennis'?'this':''}" value='Tennis'>网球</a></li>
+                                <li><a th:href="@{/ticketPurchase(type='Sports',subtype='Shotput')}" th:class="${subtype=='Shotput'?'this':''}" value='Shotput'>铅球</a></li>
+                                <li><a th:href="@{/ticketPurchase(type='Sports',subtype='Other')}" th:class="${subtype=='Other'?'this':''}" value='Other'>其他</a></li>
                             </ul>
                         </dd>
                         <dd class="right" style="" th:if="${type=='Acrobatics'}">
                             <ul style="padding: 0;">
-                                <li><a th:href="@{/ticketPurchase(type='Acrobatics',subtype='Acrobatics')}" class="" value='Acrobatics'>器械杂技</a></li>
-                                <li><a th:href="@{/ticketPurchase(type='Acrobatics',subtype='BodyAcrobatics')}" class="" value='BodyAcrobatics'>形体杂技</a></li>
-                                <li><a th:href="@{/ticketPurchase(type='Acrobatics',subtype='AerialAcrobatics')}" class="" value='AerialAcrobatics'>高空杂技</a></li>
-                                <li><a th:href="@{/ticketPurchase(type='Acrobatics',subtype='OralSkills')}" class="" value='OralSkills'>口技</a></li>
-                                <li><a th:href="@{/ticketPurchase(type='Acrobatics',subtype='Other')}" class="" value='Other'>其他</a></li>
+                                <li><a th:href="@{/ticketPurchase(type='Acrobatics',subtype='Acrobatics')}" th:class="${subtype=='Acrobatics'?'this':''}" value='Acrobatics'>器械杂技</a></li>
+                                <li><a th:href="@{/ticketPurchase(type='Acrobatics',subtype='BodyAcrobatics')}" th:class="${subtype=='BodyAcrobatics'?'this':''}" value='BodyAcrobatics'>形体杂技</a></li>
+                                <li><a th:href="@{/ticketPurchase(type='Acrobatics',subtype='AerialAcrobatics')}" th:class="${subtype=='AerialAcrobatics'?'this':''}" value='AerialAcrobatics'>高空杂技</a></li>
+                                <li><a th:href="@{/ticketPurchase(type='Acrobatics',subtype='OralSkills')}" th:class="${subtype=='OralSkills'?'this':''}" value='OralSkills'>口技</a></li>
+                                <li><a th:href="@{/ticketPurchase(type='Acrobatics',subtype='Other')}" th:class="${subtype=='Other'?'this':''}" value='Other'>其他</a></li>
                             </ul>
                         </dd>
                     </dl>
@@ -120,7 +120,7 @@
                             <div class="search_img">
                                 <img alt="" th:src="${ticket.poster}">
                                 <div class="info">
-                                    <h3>【<span th:text="${ticket.address}"></span>】<a href="#" target="_blank" th:text="${ticket.title}"></a></h3>
+                                    <h3>【<span th:text="${ticket.address}"></span>】<a href="#"  th:text="${ticket.title}"></a></h3>
                                     <p class="txt_time">
                                         <a href="#"><span class="fa fa-calendar" th:text="${#dates.format(ticket.showTimeStart,'yyyy/MM/dd HH:MM')}"></span></a>
                                     </p>
